--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -12,7 +12,8 @@
             margin:0 auto;
             color:grey;
             font-family:sans-serif;
-            
+            padding-left:20px;
+            padding-right:20px;
         }
         
     </style>
