--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -12,6 +12,7 @@
             margin:0 auto;
             color:grey;
             font-family:sans-serif;
+            padding-top:60px;
             padding-left:20px;
             padding-right:20px;
         }
