[imad-console] Updates ui/artical-two.html

--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -4,6 +4,8 @@
     <title>
         Artical Two | Yogesh Sahu
     </title>
+    
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         
