[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -1,1 +1,25 @@
-
+<html>
+    <head>
+        <title>
+            Artical-One|Yogesh Sahu
+        </title>
+    </head>
+    <body>
+        
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Artical One
+        </h3>
+        <div>
+            Aug 7 2016
+        </div>
+        <div>
+            <p>
+                Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
+            </p>
+        </div>
+    </body>
+</html>
