--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -1,1 +1,29 @@
-
+<html>
+    <head>
+        <title>
+            Artical-Two|Yogesh Sahu
+        </title>
+    </head>
+    <body>
+        
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Artical Two
+        </h3>
+        <div>
+            Aug 7 2016
+        </div>
+        <div>
+            <p>
+                Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
+            </p>
+            <p>
+                Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
+            </p>
+        </div>
+        
+    </body>
+</html>
