--- a/ui/artical-three.html
+++ b/ui/artical-three.html
@@ -1,1 +1,32 @@
-
+<html>
+    <head>
+        <title>
+            Artical-Three|Yogesh Sahu
+        </title>
+    </head>
+    <body>
+        
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Artical Three
+        </h3>
+        <div>
+            Aug 7 2016
+        </div>
+        <div>
+            <p>
+                Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
+            </p>
+            <p>
+                Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
+            </p>
+            <p>
+                Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
+            </p>
+        </div>
+        
+    </body>
+</html>
