[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -3,6 +3,8 @@
         <title>
             Artical-One|Yogesh Sahu
         </title>
+        <meta name="viewport" content="width=divice-width, initial-scale=1"/>
+        
     </head>
     <body>
         
