[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=divice-width, initial-scale=1"/>
         <style>
             .container{
-                max-width: = 800px;
-                color: = blue;
-                margin: = 0 auto;
-                font-family:= sans-serif;
+                max-width:  800px;
+                color: blue;
+                margin:  0 auto;
+                font-family:sans-serif;
                 
                 
             }
