--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -7,7 +7,7 @@
         <style>
             .container{
                 max-width:  800px;
-                color: blue;
+                color: gray;
                 margin:  0 auto;
                 font-family:sans-serif;
                 
