[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -10,7 +10,7 @@
                 color: grey;
                 margin:  0 auto;
                 font-family:sans-serif;
-                
+                padding-top: 60px;
                 
             }
         </style>
