--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -11,6 +11,8 @@
                 margin:  0 auto;
                 font-family:sans-serif;
                 padding-top: 60px;
+                padding-left: 20px;
+                padding-right:20px;
                 
             }
         </style>
