[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -4,18 +4,7 @@
             Artical-One|Yogesh Sahu
         </title>
         <meta name="viewport" content="width=divice-width, initial-scale=1"/>
-        <style>
-            .container{
-                max-width:  800px;
-                color: grey;
-                margin:  0 auto;
-                font-family:sans-serif;
-                padding-top: 60px;
-                padding-left: 20px;
-                padding-right:20px;
-                
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class ="container">
