[imad-console] Updates ui/artical-three.html

--- a/ui/artical-three.html
+++ b/ui/artical-three.html
@@ -3,6 +3,9 @@
         <title>
             Artical-Three|Yogesh Sahu
         </title>
+        
+        <meta name="viewport" content="width=divice-width, initial-scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         
