--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -3,7 +3,10 @@
         <title>
             Artical-Two|Yogesh Sahu
         </title>
+        <meta name="viewport" content="width=divice-width, initial-scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
+   
     <body>
         
         <div>
