[imad-console] Updates ui/artical-three.html

--- a/ui/artical-three.html
+++ b/ui/artical-three.html
@@ -8,7 +8,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        
+        <div>
         <div>
             <a href="/">Home</a>
         </div>
@@ -30,6 +30,6 @@
                 Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
             </p>
         </div>
-        
+        </div>
     </body>
 </html>
