--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -8,7 +8,7 @@
     </head>
    
     <body>
-        
+        <div class ="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -27,6 +27,6 @@
                 Hello This is artical one page for temp. Hello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for tempHello This is artical one page for temp.
             </p>
         </div>
-        
+        </div>
     </body>
 </html>
