[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,27 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi!  This is my first web App.
+        
+        <div class = "container">
+            <div class="center">
+                <img src="https://lh3.googleusercontent.com/-OabamFAoIKk/AAAAAAAAAAI/AAAAAAAAAbA/Gpx2LBOcLm8/s60-p-rw-no/photo.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            
+            <br>
+                <h3>
+                Personal
+                </h3>
+            <div>
+                Hi My Name is Yogesh
+            </div>    
+            <hr/>
+                <h3>
+                Professional
+                </h3>
+             <div>
+                I worked at NCTE
+            </div>    
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
