--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,11 @@
                 </h3>
              <div>
                 I worked at NCTE
-            </div>    
+            </div>   
+            <hr/>
+             <div class = "footer">
+                 
+             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
