--- a/ui/index.html
+++ b/ui/index.html
@@ -27,6 +27,16 @@
             <hr/>
              <div class = "footer">
                  This button <button id ="counter">Click Me</button>has been clicked <span id="count"> 0</span> times.
+                 
+                 <br/>
+                 <input type = "text" id="name" placeholder = "name"></input>
+                 <input type = "submit" value = "Submit"></input>
+                 <ul>
+                     <li>Name 1</li>
+                     <li>Name 2</li>
+                     <li>Name 3</li>
+                 </ul>
+                 
              </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
