--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
                  
                  <hr/>
                  <input type = "text" id="name" placeholder = "name"></input>
-                 <input type = "submit" value = "Submit"></input>
+                 <input type = "submit" value = "Submit" id = "submit_btn"></input>
                  <ul>
                      <li>Name 1</li>
                      <li>Name 2</li>
