--- a/ui/index.html
+++ b/ui/index.html
@@ -32,10 +32,8 @@
                  <hr/>
                  <input type = "text" id="name" placeholder = "name"></input>
                  <input type = "submit" value = "Submit" id = "submit_btn"></input>
-                 <ul>
-                     <li>Name 1</li>
-                     <li>Name 2</li>
-                     <li>Name 3</li>
+                 <ul id="namelist">
+                     
                  </ul>
                  
              </div>
