--- a/ui/index.html
+++ b/ui/index.html
@@ -32,7 +32,7 @@
                  <hr/>
                  <input type = "text" id="name" placeholder = "name"></input>
                  <input type = "submit" value = "Submit" id = "submit_btn"></input>
-                 <ul id="namelist">
+                 <ul id="nameList">
                      
                  </ul>
                  
